Add line breaks in table

--- a/bitacoras/not_for_human_use.tex
+++ b/bitacoras/not_for_human_use.tex
@@ -52,14 +52,14 @@
                                                                    (Iris, Mnist) \\
       & & & - Next layer use as features to predict other features \\
       & & & - Keep reducing down to 2 categories keeping metrics hight \\
-      & & & - Prune tree, train on error data
-      & & & - Build error data statistics models in much the same way
-      & 11:12 & & ( Pharma. Study on Weed:
-      & & & Study the symptoms on thought of weed)
-      & & & First, learn to predict the basic stuff
-      & & & Then, learn to predict the thought stuff
-      & & & Voila, a theorem of thought
-      & & &
+      & & & - Prune tree, train on error data \\
+      & & & - Build error data statistics models in much the same way \\
+      & 11:12 & & ( Pharma. Study on Weed: \\
+      & & & Study the symptoms on thought of weed) \\
+      & & & First, learn to predict the basic stuff \\
+      & & & Then, learn to predict the thought stuff \\
+      & & & Voila, a theorem of thought \\
+      & & & \\
       \hline
       \textbf{Total} & 21 h \\
       \hline
