--- a/docs/bitacoras/semana_5.tex
+++ b/docs/bitacoras/semana_5.tex
@@ -173,9 +173,9 @@ TypeError: 'tuple' object is not callable
 
   % how (in_progress start_time) = (... 07:29 P.M. 14/3/23) looks like
   % how (done 07:29 P.M. 14/3/23) looks like
-  Goal: add custom logging in the loader location (... 07:29 P.M. 14/3/23) \\
-  Goal: add custom loader code and watch it fail \\ 
-  Goal: fix compilation issues \\
+  Goal: add custom logging in the loader location 
+  Goal: add custom loader code and watch it fail (... 07:29 P.M. 14/3/23) (... 08:06 P.M. 14/3/23) \\
+  Goal: fix compilation issues (... 08:06 P.M. 14/3/23) (... --:-- P.M. 14/3/23) \\
   
   ...
 
