Add some loader goals

--- a/docs/bitacoras/semana_5.tex
+++ b/docs/bitacoras/semana_5.tex
@@ -174,9 +174,10 @@ TypeError: 'tuple' object is not callable
   % how (in_progress start_time) = (... 07:29 P.M. 14/3/23) looks like
   % how (done 07:29 P.M. 14/3/23) looks like
   Goal: add custom logging in the loader location 
-  Goal: add custom loader code and watch it fail (... 07:29 P.M. 14/3/23) (... 08:06 P.M. 14/3/23) \\
-  Goal: fix compilation issues (... 08:06 P.M. 14/3/23) (... --:-- P.M. 14/3/23) \\
-  
+  Goal: add custom loader code and watch it fail (... 07:29 P.M. 14/3/23) (done 08:06 P.M. 14/3/23) \\
+  Goal: fix compilation issues (... 08:06 P.M. 14/3/23) (done 11:00 P.M. 14/3/23) \\
+  Goal: adjust inputs so it actually trains (... 06:33 15/3/23) (done --:-- 15/3/23) \\
+  Goal: - (... --:-- 15/3/23) (done --:-- 15/3/23) \\
   ...
 
   Goal: start changing the code ... \\
