Update wed and thur work

--- a/docs/bitacoras/semana_6.tex
+++ b/docs/bitacoras/semana_6.tex
@@ -29,7 +29,7 @@
   \par\vspace{1mm}
   2018259419
   \par\vspace{10mm}
-  \large\textbf{Bitácora - Semana 4}
+  \large\textbf{Bitácora - Semana 6}
   \par\vspace{10mm}
   \small
 
@@ -41,7 +41,10 @@
       Fecha & Duración & Actividad & Descripción \\
       \hline
       16/3/23 & 1 h & Reunión de avance 5 & Metas es: Terminar de montar función de Ranger para estar entrenando \\
-      16/3/23 & 4 h & Presentación anteproyecto & Se alistó una pressentación para el anteproyecto \\
+      16/3/23 & 1 h & Función Ranger & Se logró desacoplar la creación del objeto datos de la función de Ranger \\
+      16/3/23 & 3 h & Presentación anteproyecto & Se alistó una presentación para el anteproyecto \\
+      17/3/23 & 1 h & Presentación anteproyecto & Se presentó el anteproyecto ante el tribunal \\
+      17/3/23 & 3 h & Función Ranger &  \\
       \hline
       \textbf{Total} & 21 h \\
       \hline
@@ -92,7 +95,15 @@
     \item formalizmos de tec español, maybe portada, 
   \end{enumerate}
 
-  Goal: connect to custom init fnc ... 
+\begin{lstlisting}
+  Goal: connect to custom init fnc ... done
+  Status:
+    The creation of data objects during Forest loader has been decoupled
+    This allows the replacement of the data loading function
+  8:39 19/3/23
+  Goal: Add custom data obj loader (to forest)
+  
+\end{lstlisting}
 
   \printbibliography[title={Bibliografía},heading=bibintoc]
 \end{document}
