Fixing function declaration logs

--- a/docs/bitacoras/semana_6.tex
+++ b/docs/bitacoras/semana_6.tex
@@ -102,6 +102,29 @@
     This allows the replacement of the data loading function
   8:39 19/3/23
   Goal: Add custom data obj loader (to forest)
+  8:48
+  Breakfast break
+  12:46
+  Goal: Add custom data obj loader (to forest) ... done
+  13:37
+  Goal: Add custom data obj loader (to data)
+  16:51
+  17:51
+  Status:
+    I have copied the Data.h file to the extension directory.
+    I have added the function.
+    However, it has not been recognized.
+    I suspect it might be related with having 2 Data.h in the namespace
+    I am experimenting with changing the file name and such
+    Currently no success
+  Goal: Identify error source ... done
+  Goal: Identify possible solution ... done
+  17:53
+  Goal: Implement solution (include ext files in main) ... failed :'c
+  Idea: Can a file be excluded from an inc dir? Nope
+  Goal: Make a new directory within ranger ... done
+  Goal: Fixing duplicated namespace error ... done
+  19:03
   
 \end{lstlisting}
 
