Add logging on function completion

--- a/docs/bitacoras/semana_6.tex
+++ b/docs/bitacoras/semana_6.tex
@@ -125,7 +125,40 @@
   Goal: Make a new directory within ranger ... done
   Goal: Fixing duplicated namespace error ... done
   19:03
-  
+  Goal: Adding minimal data definition ... done
+  19:20
+  Goal: Adding ptr guards ... done
+  20:29
+  Goal: Load basic data ... 
+  21/3/23 04:26
+  Status:
+    I have a general understanding of what I have to do.
+    The data superclass does not hold the actual data.
+    Each data subclass has a x vector and a y vector.
+    These subclasses have an element by element setter for these vectors.
+    I believe it makes more sense to use an underlying array setter to be
+    more efficient.
+  Goal: Add vector setter for Data subclass
+  05:27
+  Status:
+    Added documentation and separate label array parameter to functions
+  Goal: Add vector setter for Data subclass ... done
+  Goal: Use setter in function ... done
+  Status:
+    When running the program, a segfault occurs.
+    Fixing this segfault is close to being one of the last tasks in finishing
+    the function
+  6:48
+  Goal: Track segfault origin ... done
+  Goal: Finished function ... done
+  7:48
+  Goal: Test function with more realistic data ... done
+  Status:
+    Git has been updated
+    Function has been tested with 2 million floats
+    This procedure takes a few seconds
+  8:24
+  Work time
 \end{lstlisting}
 
   \printbibliography[title={Bibliografía},heading=bibintoc]
