--- a/docs/tesis/macros.tex
+++ b/docs/tesis/macros.tex
@@ -330,6 +330,15 @@
                                         % options [todo] todo-index
 }
 
+%% 
+\newcommand{\todo}[1]{
+  \ifdraft{
+    \hspace*{1cm}\begin{minipage}{15cm}
+      \setindent\textbf{TODO: }\texttt{#1}
+    \end{minipage}
+  }{}
+} 
+
 %% fix the title for examples
 \renewcommand{\examplelistname}{Índice de ejemplos}
 \renewcommand{\examplename}{Ejemplo}
