Add initial version of abstract

--- a/docs/tesis/resumen.tex
+++ b/docs/tesis/resumen.tex
@@ -23,26 +23,7 @@ resumen.
 \chapter*{Abstract}
 \thispagestyle{empty}
 
-Current advances in network speed, image processing, and digital technology have rendendered live video tools commonplace in professional, academic, and recreational contexts. Therefore, there has been increased interest in ensuring a high quality of experience (QoE) for these services.
-
-Same content as the Spanish version, just in English.  Check
-\href{https://deepl.com}{this site} for some help with the
-translation.  For instance, the following is the automatic translation
-from a previous version of the ``Resumen''.
-
-The abstract is the synthesis of what appears in the rest of the
-document. It has to be concise and clear enough so that someone
-reading it knows what to expect from the rest of the text, and is
-motivated to read it in full.  It usually summarizes the most relevant
-parts of the introduction and contains the most important conclusion of
-the work.
-
-It is usual to add keywords, which are the main topics covered in the
-document. The abstract is left out of the numbering of the rest of the
-sections.
-
-Avoid using bibliographical references, tables, or figures in the
-abstract.
+Current advances in network speed, image processing, and digital technology have rendendered live video tools commonplace in professional, academic, and recreational contexts. Therefore, there has been increased interest in ensuring a high quality of experience (QoE) for these services. These services may suffer from video artifacts caused by packet losses during video transmission. The previous dispTEC2-2022 project aimed to create a Video Restoration System to efficiently restore video with losses on-line, but concluded without a proper Artifact Detection System. This project proposes Rangerx, which improves in 3 ways over the dispTEC2-2022 Random Decision Forest (RDF) artifact detection approach: Rangerx was trained with a larger dataset, with a new optimized feature extraction strategy, and with a new optimized RDF backend.
 
 \bigskip
 
